# llmchat

./: .gitignore  CMakeLists.txt  README.md  THEMES.md  bench.py  config.example.json  market_study_local_llm_server_preconfigured_2025.md
src/: config.cpp  config.h  conversation.cpp  conversation.h  http_client.cpp  http_client.h  main.cpp  themes.json
src/casino/: casino.h
src/commands/: clear_command.cpp  clear_command.h  command.h  command_registry.cpp  command_registry.h  copy_command.cpp  copy_command.h  deepsearch_command.cpp  deepsearch_command.h  export_command.cpp  export_command.h  help_command.cpp  help_command.h  model_command.cpp  model_command.h  review_command.cpp  review_command.h  search_command.cpp  search_command.h  skill_command.cpp  skill_command.h  stats_command.cpp  stats_command.h  temp_command.cpp  temp_command.h
src/features/: arxiv_feature.cpp  arxiv_feature.h  deepsearch_feature.cpp  deepsearch_feature.h  feature.h  feature_registry.cpp  feature_registry.h  fileio_feature.cpp  fileio_feature.h  memory_feature.cpp  memory_feature.h  terminal_feature.cpp  terminal_feature.h  webfetch_feature.cpp  webfetch_feature.h
src/llm/: client.cpp  client.h  persistent_shell.cpp  persistent_shell.h  provider.cpp  provider.h  tool_exec.cpp  tool_exec.h
src/mcp/: client.cpp  client.h  manager.cpp  manager.h
src/ui/: animation.cpp  animation.h  chat_ui.cpp  chat_ui.h  markdown.cpp  markdown.h  onboarding.cpp  onboarding.h  renderer.cpp  renderer.h  text_util.cpp  text_util.h
test/: test_flow.cpp
